@@ -1,3 +1,5 @@
+* Add window tab for exception states
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add actual quantity on line
